--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,13 @@
 name = "ip"
 version = "0.1.0"
 edition = "2021"
+include = ["build.rs", "src/**/*", "test/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
 
 [dependencies]
 clap = { version = "4.5.20", features = ["derive"] }
 indexmap = "2.6.0"
 nix = { version = "0.29.0", features = ["hostname", "net", "socket", "time"] }
 rustix = { version = "0.38.40", features = ["net", "system", "time"] }
+
+[build-dependencies]
+cfg_aliases = "0.2.1"
