--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "ip"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+rust-version = "1.85"
 include = ["build.rs", "src/**/*", "test/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
+authors = ["Lukas Supienis <lukassup@users.noreply.github.com>"]
 
 [dependencies]
-clap = { version = "4.5.20", features = ["derive"] }
-indexmap = "2.6.0"
+clap = { version = "4.5.37", features = ["derive"] }
+indexmap = "2.9.0"
 nix = { version = "0.29.0", features = ["hostname", "net", "socket", "time"] }
-rustix = { version = "0.38.40", features = ["net", "system", "time"] }
+rustix = { version = "1.0.5", features = ["net", "system", "time"] }
 
 [build-dependencies]
 cfg_aliases = "0.2.1"
